# OOPS20-lambda

./: CMakeLists.txt  lambda_x.cpp
